Outliner data-block counter treats bones as collection #101946

Closed
opened 2022-10-20 14:30:29 +02:00 by Dalai Felinto · 6 comments

Blender Version
Broken: b6a35a8153, all versions since 2.93, and version: 3.4.0 Alpha, branch: master, commit date: 2022-10-20 11:26, hash: a30128a3c1
Worked: b6a35a8153~, 2.93

Short description of error
Outliner aggregator includes bones in the collection counter.

Exact steps for others to reproduce the error
collection_aggregator.blend

2.93 (correct):

{F13726524, image=full}

Master (broken):

{F13726513, image=full}

**Blender Version** Broken: b6a35a8153, all versions since 2.93, and version: 3.4.0 Alpha, branch: master, commit date: 2022-10-20 11:26, hash: `a30128a3c1` Worked: b6a35a8153~, 2.93 **Short description of error** Outliner aggregator includes bones in the collection counter. **Exact steps for others to reproduce the error** [collection_aggregator.blend](https://archive.blender.org/developer/F13726511/collection_aggregator.blend) 2.93 (correct): {[F13726524](https://archive.blender.org/developer/F13726524/image.png), image=full} Master (broken): {[F13726513](https://archive.blender.org/developer/F13726513/image.png), image=full}
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser was assigned by Dalai Felinto 2022-10-20 14:40:59 +02:00
Author
Owner

I strongly believe this was caused by b6a35a8153

I strongly believe this was caused by b6a35a8153

This issue was referenced by a49a960a58

This issue was referenced by a49a960a5868ad4d1bfe2187525b1dee4f5df677

This issue was referenced by 9fc000cc6f

This issue was referenced by 9fc000cc6f55784166be571c06a5f67faba9b47f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101946
No description provided.